Add remove favorite button and enhance medical record handling